--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -44,7 +44,7 @@
         <artifactId>appengine-maven-plugin</artifactId>
         <version>2.2.0</version>
         <configuration>
-          <deploy.projectId>ganewman-step-2020</deploy.projectId>
+          <deploy.projectId>ganewman-step-2020-v2</deploy.projectId>
           <deploy.version>1</deploy.version>
         </configuration>
       </plugin>
